2007-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-arch.el (vc-arch-extra-menu-map): New var and fun.

	* vc-hooks.el (vc-menu-entry): New var.
	(vc-mode-line-map): Use it so that this menu also uses the extra-menu.
	(menu-bar-tools-menu): Add the VC menu here rather than in menu-bar.el.
	(vc-menu-map): Declare and initialize in one step.

	* menu-bar.el (vc-menu-map): Don't setup any more.
	Instead, just create the proper spot in the menu.

2007-09-18  Dan Nicolaescu  <dann@ics.uci.edu>
	    Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el: Document new VC operation `extra-menu'.

	* vc-hooks.el (vc-default-extra-menu, vc-menu-map-filter): New
	function.

2007-09-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-log-view-mode): Add font-lock patterns for
	Signed-off-by, Acked-by and Merge.

2007-09-17  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-compilation-parse-errors): Prefer the
	filename from `--file-line-error', if it is available.

2007-09-17  Joe Wells  <jbw@macs.hw.ac.uk>  (tiny change)

	* textmodes/tex-mode.el (tex-compilation-parse-errors): Also match
	TeX `--file-line-error' format.

2007-09-17  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-region): Simplify previous change,
	handling the case where the region is not in `tex-main-file'.
	(tex-region-1): Delete.
	(tex-region-header): New function, doing the header part of the
	old tex-region-1.

2007-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ediff-init.el (ediff-verbose-p): This var is not a constant.

2007-09-16  Drew Adams  <drew.adams@oracle.com>

	* cus-edit (custom-face-edit-activate): Doc fix.

2007-09-16  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-region): Handle the case where the
	region is not in `tex-main-file'.  Move the old code that applies
	to both cases...
	(tex-region-1): ...to this new function.

2007-09-15  Martin Rudalics  <rudalics@gmx.at>
